# easycoffe-api

./: .gitignore  pyproject.toml
src/: manage.py
src/api/: __init__.py
src/api/v1/: coffee.py  profile.py  user.py
src/app/: admin.py  apps.py  backends.py  managers.py  modules.py
src/app/migrations/: 0001_initial.py  0002_alter_review_author.py  0002_brand_coffeecategory_coffeeproductimage_and_more.py  0003_alter_coffeecategory_options_and_more.py
src/app/models/: __init__.py  cart.py  coffee.py  discount.py  order.py  profile.py  user.py
src/dao/: __init__.py  category.py  coffee.py  profile.py  user.py
src/dto/: coffee.py  user.py
src/src/: asgi.py  urls.py  wsgi.py
src/src/settings/: base.py  dev.py  prod.py
